--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,32 @@
 body{
-    padding-top: 50px;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    overflow:hidden;
 }
 
 .navbar-header h2{
     font-weight: inherit;
-    color:#f8f8f8;
     margin-left: 10px;
     margin-top: 10px;
+}
+.mainContainer{
+    padding-top: 15%;
+    height: 100%;
+    width: 100%;
+    position:absolute;
+}
+.swiper-container {
+    width: 100%;
+    height: 100%;
+}
+.div1{
+    background-color: #337ab7;
+}
+.div2{
+    background-color: #b72c1c;
+}
+
+.nav{
+    padding-top: 4%;
 }
